feat: base implementation of payment
